<resources>
    <string name="about_pref">About</string>
    <string name="add_to_favorite_label">Add to favorites</string>
    <string name="add_to_queue_label">Add to queue</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes</string>
    <string name="authentication_label">Authentication</string>
    <string name="auto_download_inbox_category">Automatically download episodes from the inbox</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="automatic_database_export_label">Automatic database export</string>
    <string name="automatic_database_export_summary">Create a backup of the AntennaPod database every 3 days. Only keep the 5 most recent backups.</string>
    <string name="behavior">Behavior</string>
    <string name="bottom_navigation">Bottom navigation</string>
    <string name="bottom_navigation_summary">Access the most important screens from everywhere, in a single tap</string>
    <string name="database">Database</string>
    <string name="database_export_label">Database export</string>
    <string name="database_export_summary">Transfer subscriptions, listened episodes and queue to AntennaPod on another device</string>
    <string name="database_import_label">Database import</string>
    <string name="database_import_summary">Import AntennaPod database from another device</string>
    <string name="documentation_support">Documentation &amp; support</string>
    <string name="downloads_pref">Downloads</string>
    <string name="downloads_pref_sum">Update interval, Mobile data, Automatic download, Automatic deletion</string>
    <string name="edit_tags">Edit tags</string>
    <string name="episode_filters_description">List of terms used to decide if an episode should be included or excluded when auto downloading</string>
    <string name="episode_filters_label">Episode filter</string>
    <string name="episode_information">Episode information</string>
    <string name="episode_lists">Episode lists</string>
    <string name="episode_notification">Episode notifications</string>
    <string name="episode_notification_summary">Show a notification when a new episode is released</string>
    <string name="external_elements">External elements</string>
    <string name="favorites_export_label">Favorites export</string>
    <string name="favorites_export_summary">Export saved favorites to file</string>
    <string name="feed_tags_label">Tags</string>
    <string name="feed_tags_summary">Change the tags of this podcast to help organize your subscriptions</string>
    <string name="feed_volume_adapdation">Volume adaptation</string>
    <string name="feed_volume_adaptation_summary">Turn volume for episodes of this podcast up or down: %1$s</string>
    <string name="global_default">Global default</string>
    <string name="html">HTML</string>
    <string name="html_export_label">HTML export</string>
    <string name="html_export_summary">Show your subscriptions to a friend</string>
    <string name="import_export_pref">Backup &amp; restore</string>
    <string name="import_export_search_keywords">import, export</string>
    <string name="import_export_summary">Move subscriptions and queue to another device</string>
    <string name="interruptions">Interruptions</string>
    <string name="keep_updated">Keep updated</string>
    <string name="keep_updated_summary">Include this podcast when (auto-)refreshing all podcasts</string>
    <string name="keycode_media_fast_forward">90</string>
    <string name="keycode_media_rewind">89</string>
    <string name="mark_as_played_label">Mark as played</string>
    <string name="mark_as_unplayed_label">Mark as unplayed</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="open_podcast">Open podcast</string>
    <string name="opml">OPML</string>
    <string name="opml_export_label">OPML export</string>
    <string name="opml_export_summary">Transfer your subscriptions to another podcast app</string>
    <string name="opml_import_label">OPML import</string>
    <string name="opml_import_summary">Import your subscriptions from another podcast app</string>
    <string name="overflow_more">More</string>
    <string name="playback_control">Playback control</string>
    <string name="playback_pref">Playback</string>
    <string name="playback_pref_sum">Headphone controls, Skip intervals, Queue</string>
    <string name="playback_speed">Playback speed</string>
    <string name="pref_auto_delete_playback_title">Delete after playing</string>
    <string name="pref_back_button_opens_drawer">Back button opens drawer</string>
    <string name="pref_back_button_opens_drawer_summary">Pressing the back button on the default page opens the navigation drawer</string>
    <string name="pref_black_theme_message">Use full black for the dark theme</string>
    <string name="pref_black_theme_title">Full black</string>
    <string name="pref_contribute">Contribute</string>
    <string name="pref_default_page">Default page</string>
    <string name="pref_default_page_sum">Screen that is opened when starting AntennaPod</string>
    <string name="pref_downloads_button_action_sum">Display play button instead of delete button on downloads screen</string>
    <string name="pref_downloads_button_action_title">Play from downloads screen</string>
    <string name="pref_enqueue_downloaded_summary">Add downloaded episodes to the queue</string>
    <string name="pref_enqueue_downloaded_title">Enqueue downloaded</string>
    <string name="pref_enqueue_location_title">Enqueue location</string>
    <string name="pref_episode_cover_summary">Use the episode specific cover in lists whenever available. If unchecked, the app will always use the podcast cover image.</string>
    <string name="pref_episode_cover_title">Use episode cover</string>
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_expandNotify_title">High notification priority</string>
    <string name="pref_fast_forward">Fast-forward skip time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast-forward button is clicked</string>
    <string name="pref_feed_playback_speed_sum">The speed to use when starting audio playback for episodes in this podcast</string>
    <string name="pref_feed_skip">Auto skip</string>
    <string name="pref_feed_skip_sum">Skip introductions and ending credits</string>
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_followQueue_title">Continuous playback</string>
    <string name="pref_full_notification_buttons_sum">Change the buttons on the playback notification</string>
    <string name="pref_full_notification_buttons_title">Set notification buttons</string>
    <string name="pref_global_default_episode_list_sort_order_sum">Choose the default order for episodes on the podcast screen</string>
    <string name="pref_global_default_episode_list_sort_order_title">Default sort order</string>
    <string name="pref_hardware_forward_button_summary">Customize the forward button behavior</string>
    <string name="pref_hardware_forward_button_title">Forward button</string>
    <string name="pref_hardware_previous_button_summary">Customize the previous button behavior</string>
    <string name="pref_hardware_previous_button_title">Previous button</string>
    <string name="pref_nav_drawer_items_sum">Change which items appear in the navigation drawer or bottom navigation</string>
    <string name="pref_nav_drawer_items_title">Customize navigation</string>
    <string name="pref_new_episodes_action_title">New episodes action</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or Bluetooth devices get disconnected</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones or Bluetooth disconnect</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for interruptions</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused</string>
    <string name="pref_persistNotify_title">Persistent playback controls</string>
    <string name="pref_playback_speed_sum">Customize the speeds available for variable speed playback</string>
    <string name="pref_playback_time_respects_speed_sum">Displayed position and duration are adapted to playback speed</string>
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
    <string name="pref_rewind">Rewind skip time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_show_remain_time_summary">Display remaining time of episodes when checked. If unchecked, display total duration of episodes.</string>
    <string name="pref_show_remain_time_title">Show remaining time</string>
    <string name="pref_skip_keeps_episodes_sum">Keep episodes when they are skipped</string>
    <string name="pref_skip_keeps_episodes_title">Keep skipped episodes</string>
    <string name="pref_smart_mark_as_played_sum">Mark episodes as played even if less than a certain amount of seconds of playing time is still left</string>
    <string name="pref_smart_mark_as_played_title">Smart mark as played</string>
    <string name="pref_stream_over_download_sum">Display stream button instead of download button in lists</string>
    <string name="pref_stream_over_download_title">Prefer streaming</string>
    <string name="pref_tinted_theme_message">Adapt app colors based on the wallpaper</string>
    <string name="pref_tinted_theme_title">Dynamic colors</string>
    <string name="pref_unpauseOnBluetoothReconnect_sum">Resume playback when bluetooth reconnects</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth reconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_sum">Resume playback when the headphones get reconnected</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones reconnect</string>
    <string name="preference_search_clear_history">Clear history</string>
    <string name="preference_search_clear_input">Clear</string>
    <string name="preference_search_hint">Search…</string>
    <string name="preference_search_no_results">No results</string>
    <string name="project_pref">Project</string>
    <string name="queue_label">Queue</string>
    <string name="reassign_hardware_buttons">Reassign hardware buttons</string>
    <string name="remove_archive_feed_label">Delete / archive</string>
    <string name="remove_from_favorite_label">Remove from favorites</string>
    <string name="remove_from_queue_label">Remove from queue</string>
    <string name="remove_inbox_label">Remove from inbox</string>
    <string name="report_bug_title">Report bug</string>
    <string name="reset_playback_position_label">Reset playback position</string>
    <string name="share_label">Share</string>
    <string name="skip_episode_label">Skip episode</string>
    <string name="swipeactions_label">Swipe actions</string>
    <string name="swipeactions_summary">Choose what happens when swiping an episode in a list</string>
    <string name="synchronization_pref">Synchronization</string>
    <string name="synchronization_sum">Synchronize with other devices</string>
    <string name="theming">Theming</string>
    <string name="user_interface_label">User interface</string>
    <string name="user_interface_sum">Appearance, subscriptions, lockscreen</string>
    <string name="visit_user_forum">User forum</string>
    <string name="visit_website_label">Visit website</string>
</resources>