<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:search="http://schemas.android.com/apk/com.bytehamster.lib.preferencesearch">
    <PreferenceCategory android:title="@string/database">
        <Preference android:title="@string/database_export_label" android:key="prefDatabaseExport" android:summary="@string/database_export_summary" search:keywords="@string/import_export_search_keywords" />
        <SwitchPreferenceCompat android:title="@string/automatic_database_export_label" android:key="prefAutomaticDatabaseExport" android:summary="@string/automatic_database_export_summary" android:defaultValue="false" />
        <Preference android:title="@string/database_import_label" android:key="prefDatabaseImport" android:summary="@string/database_import_summary" search:keywords="@string/import_export_search_keywords" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/opml">
        <Preference android:title="@string/opml_export_label" android:key="prefOpmlExport" android:summary="@string/opml_export_summary" />
        <Preference android:title="@string/opml_import_label" android:key="prefOpmlImport" android:summary="@string/opml_import_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/html">
        <Preference android:title="@string/html_export_label" android:key="prefHtmlExport" android:summary="@string/html_export_summary" />
        <Preference android:title="@string/favorites_export_label" android:key="prefFavoritesExport" android:summary="@string/favorites_export_summary" />
    </PreferenceCategory>
</PreferenceScreen>
