<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/skip_episode_item" android:title="@string/skip_episode_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/remove_inbox_item" android:title="@string/remove_inbox_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/mark_read_item" android:title="@string/mark_as_played_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/mark_unread_item" android:title="@string/mark_as_unplayed_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/add_to_queue_item" android:title="@string/add_to_queue_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/remove_from_queue_item" android:title="@string/remove_from_queue_label" custom:showAsAction="collapseActionView" />
    <item android:id="@id/add_to_favorites_item" android:menuCategory="container" android:title="@string/add_to_favorite_label" />
    <item android:id="@id/remove_from_favorites_item" android:menuCategory="container" android:title="@string/remove_from_favorite_label" />
    <item android:id="@id/reset_position" android:title="@string/reset_playback_position_label" custom:showAsAction="collapseActionView" />
    <item android:icon="@drawable/ic_web" android:id="@id/visit_website_item" android:title="@string/visit_website_label" custom:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@id/share_item" android:menuCategory="container" android:title="@string/share_label" />
    <item android:id="@id/open_podcast" android:title="@string/open_podcast" custom:showAsAction="collapseActionView" />
</menu>
